--- a/client/src/App.css
+++ b/client/src/App.css
@@ -36,7 +36,7 @@ body{
 
 .grid_item{
   
-  background-color: #52007b; /* Green */
+  background-color: #52007b; 
   border: 5px solid #26003a;
   color: white;
   padding: 15px 32px;
@@ -47,4 +47,10 @@ body{
 }
 .grid_item:hover{
   background-color: #64347c;;
+}
+
+.poster{
+  
+  width: 100%;
+  height: 100%
 }
