--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,9 +1,10 @@
 * {
-  font-family: Pixelify Sans;
+  /* font-family: Pixelify Sans; */
 }
 
 body{
   font-family: Pixelify Sans;
+  font-size: 15px;
   background-color: #8d00d4;
   color: white;
   height: 1500px;
@@ -31,13 +32,13 @@ body{
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
-  grid-gap: 5px;
+  grid-gap: 3px;
 }
 
 .grid_item{
   
   background-color: #52007b; 
-  border: 5px solid #26003a;
+  border: 3px solid #26003a;
   color: white;
   padding: 15px 32px;
   text-align: center;
@@ -53,4 +54,19 @@ body{
   
   width: 100%;
   height: 100%
+}
+
+.screen_modal{
+  font-family:'Times New Roman', Times, serif;
+  background-image: url("./public/screen_assets/win98_desktop.jpeg"); 
+  text-align: center;
+  padding: 0;
+  height: 400px;
+}
+
+.tab_title{
+  padding-left: 2%;
+  padding-right: 2ch;
+  padding-top: 3px;
+  padding-bottom: 3px;
 }
