--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,7 +3,6 @@
 body{
   font-family: "Pixelated MS Sans Serif";
   font-size: 15px;
-  background-color: #630890;
   color: white;
 }
 
@@ -17,6 +16,34 @@ body{
   padding-left: 10%;
   padding-right: 10%;
   padding-top: 1%;
+  background-color: #630890;
+}
+
+.main_app_body_smartphone{
+  
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  height: 100%;
+  width: 100%;
+  padding-left: 1%;
+  padding-right: 1%;
+  padding-top: 1%;
+  background-color: #630890;
+
+}
+
+.screen_smartphone{
+  
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  height: 100vh;
+  width: 100%;
+  padding-left: 1%;
+  padding-right: 1%;
+  padding-top: 1%;
+  background-color: #07a292;
   
 }
 
