--- a/client/src/App.css
+++ b/client/src/App.css
@@ -11,12 +11,12 @@ body{
   align-items: center;
   justify-content: center;
   text-align: center;
-  height: 100%;
+  height: 100vh;
   width: 100%;
   padding-left: 10%;
   padding-right: 10%;
   padding-top: 1%;
-  background-color: #630890;
+  background-color: #760dab;
 }
 
 .main_app_body_smartphone{
@@ -29,7 +29,7 @@ body{
   padding-left: 1%;
   padding-right: 1%;
   padding-top: 1%;
-  background-color: #630890;
+  background-color: #760dab;
 
 }
 
